# jaqalpaq

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  Makefile  NOTICE  README.md  install.sh  make.bat  setup.cfg  setup.py
devel/: build  ipynb-diff  ipynb-execute  ipynb-purify  refresh-data-files
doc/: conf.py  glossary.rst  index.rst  jaqal.core.rst  jaqal.generator.rst  jaqal.parser.rst  jaqal.rst  jaqalpaq.core.rst  jaqalpaq.emulator.rst  jaqalpaq.parser.rst  jaqalpaq.rst  jaqalpaq.scheduler.rst  jaqalpaq.transpilers.cirq.rst  jaqalpaq.transpilers.projectq.rst  jaqalpaq.transpilers.qiskit.rst  jaqalpaq.transpilers.quil.rst  jaqalpaq.transpilers.rst  jaqalpaq.transpilers.tket.rst  modules.rst
docs/: conf.py  index.rst  jaqalpup.cirq.rst  jaqalpup.core.rst  jaqalpup.generator.rst  jaqalpup.parser.rst  jaqalpup.qiskit.rst  jaqalpup.quil.rst  jaqalpup.rst  jaqalpup.scheduler.rst  modules.rst  qscout.cirq.rst  qscout.core.rst  qscout.generator.rst  qscout.parser.rst  qscout.qiskit.rst  qscout.quil.rst  qscout.rst  qscout.scheduler.rst
examples/: usage_example.py
examples/H2 (Molecular Hydrogen)/: JaqalPaq_H2_Exemplar.ipynb  Jaqal_H2_Stretched.ipynb
examples/HeH+ (Helium Hydride)/: JaqalPaq_HeH+_Tapered_Exemplar.ipynb  JaqalPaq_HeH+_Untapered_Exemplar.ipynb
examples/LiH (Lithium Hydride)/: JaqalPaq_LiH_Exemplar.ipynb
examples/Tutorials/: Emulator_Demo.ipynb  Emulator_IonSim_Example.ipynb  Transpiler_Demo.ipynb
examples/jaqal/: Sxx_circuit.jaqal  Sxx_circuit_q.py  bad-empty_prog.jaqal  bad-no_measure.jaqal  bad-no_prepare.jaqal  bad-nonempty_zero_loop_outside_subcircuit.jaqal  bad-parallel_block_in_parallel_loop.jaqal  bad-parallel_gate_collision.jaqal  bad-sequential_loop_in_parallel.jaqal  bell_prep.jaqal  bell_prep.py  bell_prep_q.py  bell_prep_spec.jaqal  empty_loop.jaqal  empty_loop_outside_subcircuit.jaqal  empty_loop_q.py  empty_parallel.jaqal  empty_parallel_q.py  empty_prog.jaqal  empty_prog_q.py  hadamard.jaqal  hadamard.py  idle_padding.jaqal  idle_padding_q.py  molmer-sorensen-rotations.jaqal  molmer-sorensen-rotations_q.py  nested_bit_flips.jaqal  nested_bit_flips_q.py  no_measure.jaqal  no_prepare.jaqal  nonempty_zero_loop_outside_subcircuit.jaqal  one-qubit-rotations.jaqal  one-qubit-rotations_q.py  only_idles.jaqal  only_idles_q.py  parallel_block_in_parallel_loop.jaqal  parallel_block_in_sequential_loop.jaqal  parallel_block_in_sequential_loop_q.py  parallel_gate_collision.jaqal  parallel_idle.jaqal  (+19 more)
iqasm/: iqasm_grammar.lark  iter_gates.py  let_visitor.py  macro_context_visitor.py  macro_expansion_visitor.py  map_visitor.py  parse.py
iqasm/testing/: mixin.py
jaqal/: __init__.py  error.py  export_visitor.py  extract_body.py  extract_let.py  extract_macro.py  extract_map.py  extract_register.py  interface.py  iter_gates.py  jaqal_grammar.lark  let_visitor.py  macro_context_visitor.py  macro_expansion_visitor.py  map_visitor.py  parse.py  resolve_let.py  resolve_macro.py  resolve_map.py
jaqal/cirq/: frontend.py
jaqal/core/: __init__.py  block.py  circuit.py  circuitbuilder.py  constant.py  gate.py  gatedef.py  identifier.py  macro.py  parameter.py  register.py  used_qubit_visitor.py  visitor.py
jaqal/generator/: __init__.py  generator.py
jaqal/jaqal/: parser.py
jaqal/parser/: __init__.py  block_normalizer.py  extract_map.py  extract_register.py  extract_usepulses.py  identifier.py  interface.py  iter_gates.py  lexer.py  macro_context_visitor.py  parse.py  parser.py  resolve_let.py  resolve_macro.py  resolve_map.py  validate.py
jaqal/projectq/: frontend.py
jaqal/pygsti/: __init__.py  forward_simulation.py  frontend.py  pygstimodel.py
jaqal/qiskit/: frontend.py
jaqal/qscout/: native_gates.py
jaqal/quil/: frontend.py  ioncompiler.py
jaqal/scheduler/: scheduler.py
jaqal/testing/: mixin.py
jaqal/tket/: __init__.py  frontend.py
jaqalpaq/: __init__.py  _cli.py  error.py  utilities.py
jaqalpaq/core/: __init__.py  block.py  circuit.py  circuitbuilder.py  constant.py  gate.py  gatedef.py  macro.py  parameter.py  register.py  result.py
jaqalpaq/emulator/: __init__.py  _validator.py  backend.py  cli.py  frontend.py  header.py  noiseless.py  noisy.py  noisy_gate_model.py
jaqalpaq/generator/: generator.py
jaqalpaq/jaqal/: __init__.py  parser.py
jaqalpaq/parser/: __init__.py  block_normalizer.py  extract_let.py  extract_macro.py  extract_map.py  extract_register.py  extract_usepulses.py  identifier.py  interface.py  iter_gates.py  jaqal_grammar.lark  macro_context_visitor.py  parse.py  parser.py  resolve_let.py  resolve_macro.py  resolve_map.py  tree.py  validate.py
jaqalpaq/pygsti/: __init__.py  forward_simulation.py  pygstimodel.py
jaqalpup/: __init__.py  error.py  utilities.py
jaqalpup/cirq/: frontend.py
jaqalpup/core/: __init__.py  block.py  circuit.py  constant.py  gate.py  gatedef.py  identifier.py  macro.py  parameter.py  register.py  used_qubit_visitor.py  visitor.py
jaqalpup/generator/: __init__.py  generator.py
jaqalpup/jaqal/: __init__.py  parser.py
jaqalpup/parser/: parser.py  parsetab.py
jaqalpup/projectq/: __init__.py  frontend.py
jaqalpup/pygsti/: frontend.py
jaqalpup/qiskit/: __init__.py  frontend.py  gates.py  unroller.py
jaqalpup/qscout/: native_gates.py
jaqalpup/quil/: __init__.py  frontend.py  ioncompiler.py  qscoutam.py
jaqalpup/scheduler/: scheduler.py
jaqalpup/tket/: frontend.py
parser/: iqasm_grammar.lark  parse.py
qscout/: __init__.py  error.py  utilities.py
qscout/cirq/: __init__.py  frontend.py
qscout/core/: __init__.py  block.py  circuit.py  constant.py  gate.py  gatedef.py  macro.py  parameter.py  register.py
test/: test_block_normalizer.py  test_examples.py  test_expand_macro_visitor.py  test_extract_body.py  test_extract_let.py  test_extract_macro.py  test_extract_map.py  test_extract_register.py  test_extract_usepulses.py  test_interface.py  test_iter_gates.py  test_let_visitor.py  test_macro_context_visitor.py  test_map_visitor.py  test_parser.py  test_resolve_let.py  test_resolve_macro.py  test_resolve_map.py  test_visitor.py
(+234 files in other folders)
