[metadata]
name = JaqalPaq
author = Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = Python tools for Jaqal
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = attr: jaqalpaq.__version__
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find:
package_dir =
    =src
install_requires = sly
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaq
    jaqalpaq.*
where = src

[options.extras_require]
tests = pytest
docs = Sphinx; sphinx-rtd-theme; pyGSTi; JaqalPaq-extras[qiskit,pyquil,projectq,pytket]==1.0.0rc1
pygsti-integration = pyGSTi

[options.entry_points]
console_scripts =
    jaqal-emulate = jaqalpaq._cli:main

[bdist_wheel]
universal = 1
