[metadata]
name = JaqalPaq
author = Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = Python tools for Jaqal
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = attr: jaqalpaq.__version__
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find:
package_dir =
    =src
install_requires = sly
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    jaqalpaq
    jaqalpaq.*
where = src

[options.extras_require]
tests = pytest
docs = Sphinx; sphinx-rtd-theme; pyGSTi>=0.9.10,<0.9.11; JaqalPaq-extras[qiskit,pyquil,projectq,pytket]==1.0.0
pygsti-integration = pyGSTi>=0.9.10,<0.9.11
notebooks = openfermion==1.1.0; pyscf>=1.7.6,<1.7.7; openfermionpyscf==0.5; h5py<3.3

[options.data_files]
share/jaqalpaq/tests =
    tests/__init__.py
share/jaqalpaq/examples =
    examples/usage_example.py
share/jaqalpaq/tests/core =
    tests/core/__init__.py
    tests/core/abstractgate.py
    tests/core/common.py
    tests/core/gpf1.py
    tests/core/gpf2.py
    tests/core/randomize.py
    tests/core/test_block.py
    tests/core/test_branch.py
    tests/core/test_circuit.py
    tests/core/test_circuitbuilder.py
    tests/core/test_constant.py
    tests/core/test_gate.py
    tests/core/test_gatedef.py
    tests/core/test_loop.py
    tests/core/test_macro.py
    tests/core/test_named_qubit.py
    tests/core/test_parameter.py
    tests/core/test_register.py
    tests/core/test_usepulses.py
share/jaqalpaq/examples/jaqal =
    examples/jaqal/Sxx_circuit.jaqal
    examples/jaqal/bell_prep.jaqal
    examples/jaqal/bell_prep_spec.jaqal
    examples/jaqal/empty_loop.jaqal
    examples/jaqal/empty_loop_outside_subcircuit.jaqal
    examples/jaqal/empty_parallel.jaqal
    examples/jaqal/empty_prog.jaqal
    examples/jaqal/hadamard.jaqal
    examples/jaqal/hadamard.py
    examples/jaqal/molmer-sorensen-rotations.jaqal
    examples/jaqal/nested_bit_flips.jaqal
    examples/jaqal/no_measure.jaqal
    examples/jaqal/no_prepare.jaqal
    examples/jaqal/nonempty_zero_loop_outside_subcircuit.jaqal
    examples/jaqal/one-qubit-rotations.jaqal
    examples/jaqal/only_idles.jaqal
    examples/jaqal/parallel_block_in_parallel_loop.jaqal
    examples/jaqal/parallel_block_in_sequential_loop.jaqal
    examples/jaqal/parallel_gate_collision.jaqal
    examples/jaqal/parallel_loop.jaqal
    examples/jaqal/parallel_prep-parallel_measure.jaqal
    examples/jaqal/pi_fracs.jaqal
    examples/jaqal/prepare-measure-equiv.jaqal
    examples/jaqal/prepare-measure.jaqal
    examples/jaqal/sequential_block_in_parallel_loop.jaqal
    examples/jaqal/sequential_loop_in_parallel.jaqal
    examples/jaqal/single_qubit_gst.jaqal
    examples/jaqal/single_qubit_gst.py
    examples/jaqal/two-qubit-nonadjacent.jaqal
    examples/jaqal/zero_loop.jaqal
share/jaqalpaq/tests/emulator =
    tests/emulator/__init__.py
    tests/emulator/test_forward_simulation.py
    tests/emulator/test_jaqal_files.py
share/jaqalpaq/tests/generator =
    tests/generator/__init__.py
    tests/generator/test_generator.py
share/jaqalpaq/tests/jaqalparser =
    tests/jaqalparser/__init__.py
    tests/jaqalparser/test_examples.py
    tests/jaqalparser/test_jaqalpup_parser.py
    tests/jaqalparser/test_parser.py
share/jaqalpaq/examples/Tutorials =
    examples/Tutorials/Emulator_Demo.ipynb
    examples/Tutorials/Transpiler_Demo.ipynb
share/jaqalpaq/tests/core/algorithm =
    tests/core/algorithm/__init__.py
    tests/core/algorithm/test_expand_macros.py
    tests/core/algorithm/test_expand_subcircuits.py
    tests/core/algorithm/test_fill_in_let.py
    tests/core/algorithm/test_unit_timing.py
    tests/core/algorithm/test_used_qubits.py
    tests/core/algorithm/test_visitor.py
share/jaqalpaq/examples/jaqal/spec_samples =
    examples/jaqal/spec_samples/bell.jaqal
    examples/jaqal/spec_samples/blocks.jaqal
    examples/jaqal/spec_samples/compile.jaqal
    examples/jaqal/spec_samples/constants.jaqal
    examples/jaqal/spec_samples/crz.jaqal
    examples/jaqal/spec_samples/loop.jaqal
    examples/jaqal/spec_samples/macro.jaqal
    examples/jaqal/spec_samples/output.jaqal
    examples/jaqal/spec_samples/registers.jaqal
    examples/jaqal/spec_samples/slice.jaqal
    examples/jaqal/spec_samples/two_qubit_gate.jaqal
share/jaqalpaq/examples/HeH+ (Helium Hydride) =
    examples/HeH+ (Helium Hydride)/JaqalPaq_HeH+_Tapered_Exemplar.ipynb
    examples/HeH+ (Helium Hydride)/JaqalPaq_HeH+_Untapered_Exemplar.ipynb
share/jaqalpaq/examples/LiH (Lithium Hydride) =
    examples/LiH (Lithium Hydride)/JaqalPaq_LiH_Exemplar.ipynb
share/jaqalpaq/examples/H2 (Molecular Hydrogen) =
    examples/H2 (Molecular Hydrogen)/JaqalPaq_H2_Exemplar.ipynb

[options.entry_points]
console_scripts =
    jaqal-emulate = jaqalpaq._cli:main

[bdist_wheel]
universal = 1
